# OrthoReduce

./: CLAUDE.md  DASHBOARD_INTEGRATION.md  DASHBOARD_README.md  Dockerfile  ENHANCED_PLOTTING_README.md  EXPERIMENT_ORCHESTRATION_README.md  HYPERBOLIC.md  LICENSE  MONITORING.md  README.md  SPHERICAL_EMBEDDINGS_IMPROVEMENTS.md  TODO.md  code_samples.txt  dashboard_config.yaml  demo_enhanced_convex.py  docker-compose.yml  download_code_llm.py  example_preprocessing.py  generate_results.py  launch_dashboard.py  main.py  main_dimensionality_reduction.py  orthoreduce.py  orthoreduce_enhanced.py  pyproject.toml  requirements.txt  run_orthoreduce.sh  run_orthoreduce_enhanced.sh  simple_benchmark.py  streamlit_app.py  test_enhanced_plotting.py  test_monitoring.py  test_optimizations.py
archive/docs/: video_script.md
archive/experimental/: benchmark_performance.py  convex_optimized.py  example_improved.py  fingerprinting.py  fjlt.py
archive/legacy_implementations/: test_old_methods.py
archive/mass_spectrometry/: ms_data.py  ms_pipeline.py  ms_pipeline_complex.py  run_ms_report.py
convex_demo_1754686660/: convex_summary.json
examples/: advanced_plotting_demo.py  hyperbolic_demo.py  run_staged_optimization_example.py  simple_spherical_demo.py  spherical_embeddings_demo.py
examples/configs/: comprehensive_experiment.yaml  fast_experiment.yaml  ms_experiment.yaml
experiment_results/: metadata.json  results.csv  results.json  summary.txt
orthogonal_projection/: __init__.py  advanced_plotting.py  calibration.py  cli.py  convex_optimized.py  dashboard.py  dashboard_utils.py  dimensionality_reduction.py  embedding_viewer.py  enhanced_dashboard.py  evaluation.py  evaluation_optimized.py  exceptions.py  experiment_config.py  experiment_logger.py  experiment_orchestration.py  fingerprinting.py  hyperbolic.py  hyperparameter_search.py  monitoring.py  ms_data.py  pipeline.py  pipeline_orchestrator.py  preprocessing.py  projection.py  results_aggregator.py  spherical_embeddings.py  visualization.py
quick_test_results/: metadata.json  results.csv  results.json  summary.txt
test_integration_final/: enhanced_results.json  enhanced_summary.txt  results.csv
tests/: test_advanced_plotting.py  test_convex_optimized.py  test_download_code_llm.py  test_enhanced_methods.py  test_evaluation.py  test_fingerprinting.py  test_hyperbolic.py  test_jll_metrics.py  test_ms_data.py  test_pipeline.py  test_preprocessing.py  test_projection.py  test_simplified_interface.py  test_spherical_embeddings.py
